modified:   dictionary/content.latex modified:   dictionary/dictionary.pdf modified:   dictionary/words.yaml

--- a/dictionary/content.latex
+++ b/dictionary/content.latex
@@ -1527,6 +1527,10 @@
 	
 
 	
+		\key{Carlos.} {\footnotesize (From PG \ipa{*karlaz}).} m. Charles, Carlos.
+	
+
+	
 		\key{ce.}  n. letter \textit{c}.
 	
 
@@ -1687,6 +1691,10 @@
 
 	
 		\key{dambros.} {\footnotesize (From PIE \ipa{*ǵm̥-rós}).} m. son in law.
+	
+
+	
+		\key{damíeti.} {\footnotesize (From Dan. \ipa{damis}).} f. to marry.
 	
 
 	
@@ -3000,7 +3008,7 @@
 	
 
 	
-		\key{Joánna Karlos Frederik Gauss.}  m. Johann Carl Friedrich Gauss.
+		\key{Joánna Carlos Frederik Gauss.}  m. Johann Carl Friedrich Gauss.
 	
 
 	
@@ -3160,10 +3168,6 @@
 
 	
 		\key{kaputjos.} {\footnotesize (From Dan. \ipa{kaput}).} adj. main, principal.
-	
-
-	
-		\key{Karlos.} {\footnotesize (From PG \ipa{*karlaz}).} m. Charles, Carlos.
 	
 
 	
@@ -3805,10 +3809,6 @@
 	
 
 	
-		\key{nevamos.}  adj. ninth.
-	
-
-	
 		\key{nevan.} {\footnotesize (From PIE \ipa{*h₁néwn̥}).} num. nine.
 	
 
@@ -3826,6 +3826,10 @@
 
 	
 		\key{nevandsontos.} {\footnotesize (From PIE \ipa{*h₁néwn̥dḱomt}).} adj. ninetieth.
+	
+
+	
+		\key{nevanos.}  adj. ninth.
 	
 
 	
@@ -4687,6 +4691,10 @@
 	
 
 	
+		\key{pramenjeti.} {\footnotesize (From Dan. \ipa{praman}).} v. to start.
+	
+
+	
 		\key{pramos.}  adj. first.
 	
 
@@ -5348,6 +5356,10 @@
 	
 
 	
+		\key{soliska.} {\footnotesize (From Dan. \ipa{din Soles}).} f. week.
+	
+
+	
 		\key{solnos.} {\footnotesize (From PIE \ipa{*solh₂-}).} pron. whole (in singular), all (in plural).
 	
 
@@ -5390,7 +5402,11 @@
 	
 
 	
-		\key{sonfis.} {\footnotesize (From PIE \ipa{*som-dʰh₁-is}, from \ipa{*dʰeh₁-}).} m. judge.
+		\key{sonfis.} {\footnotesize (From PIE \ipa{*som-dʰh₁-is}, from \ipa{*dʰeh₁-}).} f. destiny, fate, doom, fortune, predestination.
+	
+
+	
+		\key{sonfjos.} {\footnotesize (From Dan. \ipa{sonfis}).} f. fateful.
 	
 
 	
@@ -5467,6 +5483,10 @@
 
 	
 		\key{sper.} {\footnotesize (From PIE \ipa{*spḗr}).} m. sparrow.
+	
+
+	
+		\key{spes.} {\footnotesize (From PIE \ipa{*spéh₁s}).} f. prosperity, success.
 	
 
 	
