modified:   biblia/biblia.latex modified:   biblia/biblia.pdf

--- a/biblia/biblia.latex
+++ b/biblia/biblia.latex
@@ -27,18 +27,18 @@
 
 \subsubsection*{Denatis jehanias}
 
-\v{1:1}{En prameni dedenat Divos djum i fedomam.}
+\v{1:1}{En prameni dedenát Divos djum i fedomam.}
 \v{2}{Fedóm est nevidma i nutipretiopés, da rebos úper
 nebufni, da numan Divosjo bereto úper vedensu.}
 
-\v{3}{Da vevept Divos: \qt{Deníto lukos}, i dedenato lukos.}
+\v{3}{Da vevept Divos: \qt{Deníto lukos}, i dedenáto lukos.}
 \v{4}{Da vevidet Divos lukom, jom vesum. De apobidet Divos lukom apo rebesos.}
 \v{5}{Vevopet Divos lukom \textit{dine}, da rebos \textit{nopte}. Set-pe
 veksperos, set-pe ausós. But pramos din.}
 
 \v{6}{Toives vevept Divos: \qt{Deníto atirama medi vedenfi, da apobidoit vodó
 apo vedenmos}.}
-\v{7}{Sep dedenat Divos atiramam, da apobefidet vodó, ja upo atirami, apo toimos,
+\v{7}{Sep dedenát Divos atiramam, da apobefidet vodó, ja upo atirami, apo toimos,
 ja úper atirami.}
 \v{8}{Vevopet Divos atiramam \textit{dive}. Da vevidet Divos jod vesu. Set-pe
 veksperos, set-pe ausós. But viteros din.}
@@ -49,7 +49,7 @@ enosóm statins, da apolelukoito susna.}
 \v{10}{Vevopet Divos susnam \textit{fame}, da opjugos vedóm vevopet
 \textit{marie}. Da vevidet Divos jod vesu.}
 \v{11}{Toives vevept Divos: \qt{Blojét fedóm grontans sugontans semó pro
-enosóm ardim e iveman, da dorú denonta pelmó som samenfi en soi ana fami.} Da
+enosóm ardim e iveman, da dorú denánta pelmó som samenfi en soi ana fami.} Da
 but tosme.}
 \v{12}{Beblót fedóm grontans sugontans semó pro enosóm ardim e iveman, da dorú
 denonta pelmó som samenfi en soi ana fami pro enosóm ardim. Da vevidet Divos
@@ -84,8 +84,8 @@ da visom reptilim fames pro enosjo ardim. Da vevidet Divos jod vesu.}
 \v{26}{Toives vevept Divos: \qt{Deníme manum pro nosjam iconam e iveman, da
 potíanto úper pistisu maries, i úper avisu dives, i úper pesvi, i úper visi
 jehaní, i úper visosu reptilisu dragomnosu ana fedomam}.}
-\v{27}{Sep dedenat Divos manum. Pro iconam e iveman Divosjo enons dedenat.
-Virom i benam dedenat enons.}
+\v{27}{Sep dedenát Divos manum. Pro iconam e iveman Divosjo enons dedenát.
+Virom i benam dedenát enons.}
 \v{28}{Vesuveverdíet enons: \qt{Alojanto i anapelvíanto. Pleníete fedomam i
 enam uperpotíete. Potíete úper pistisu maries, i úper avisu dives, i úper
 visi pesvi, i úper visi jehaní, i úper visosu reptilisu dragomnosu ana
@@ -98,7 +98,7 @@ baita usmi,}
 reptilimos som bivonte psyche dragomnomos ana fedomam. Visom grontam baite».
 Da but tosme.}
 
-\v{31}{Sep vevidet Divos visom jod dedenat, da vevidet jod pelviste vesu.
+\v{31}{Sep vevidet Divos visom jod dedenát, da vevidet jod pelviste vesu.
 Set-pe veksperos, set-pe ausós. But svektos din.}
 
 \v{2:1}{Sep trosberomnoi djus, fedóm, i visa jehania.}
@@ -110,9 +110,9 @@ dini trosbeferet apo visomos Enosjo verdomos.}
 
 \subsubsection{Adám i Eva}
 
-\v{4}{Vid bibliom danaties dives i fames, joives dedenato ana dini ana tosmi
-dedenat Divos djum i fedomam,}
-\v{5}{i visom grontam adrosjo, joteros nespe dedenato ana fami, i visom
+\v{4}{Vid bibliom danaties dives i fames, joives dedenáto ana dini ana tosmi
+dedenát Divos djum i fedomam,}
+\v{5}{i visom grontam adrosjo, joteros nespe dedenáto ana fami, i visom
 grontam, joteros nespe uperbefereto, dégar ne but sesontíonts anfrom ana
 fedomam, i ne manves jo vardjoit fedomam.}
 \v{6}{Nu brevan uperit ud fames, i vedenjet visom pretiops fames.}
@@ -175,29 +175,29 @@ pretiops, i bújetor viros en bivontam psycham.}
 \subsubsection{Denamó Jesues Christosjo}
 
 \v{1:1}{Bibliom danamens Jesues Christosjo, sunus Davides, sunus Abrahames.}
-\v{2}{Abrahám dedenat Isakam. Isak dedenat Jacobom. Jacobos dedenat Judam i
+\v{2}{Abrahám dedenát Isakam. Isak dedenát Jacobom. Jacobos dedenát Judam i
 enosjo bratrans.}
-\v{3}{Juda dedenat Pharesam i Zaram, apo Thamares. Pharés dedenat Esdromam.
-Esdróm dedenat Aramam.}
-\v{4}{Arám dedenat Aminadabam. Aminadab dedenat Nassonam. Nassón dedenat
+\v{3}{Juda dedenát Pharesam i Zaram, apo Thamares. Pharés dedenát Esdromam.
+Esdróm dedenát Aramam.}
+\v{4}{Arám dedenát Aminadabam. Aminadab dedenát Nassonam. Nassón dedenát
 Salmonam.}
-\v{5}{Salmón dedenat Boesam, apo Rachabes. Boés dedenat Jobedam, apo Ruthes.
-Jobed dedenat Jessáiam.}
-\v{6}{Jessái dedenat redam Davidam. David dedenat Solomonam, apo benas Urias.}
-\v{7}{Solomón dedenat Roboamam. Roboám dedenat Abiam. Abia dedenat Asapham.}
-\v{8}{Asaph dedenat Josaphatam. Josaphat dedenat Joramam. Jorám dedenat
+\v{5}{Salmón dedenát Boesam, apo Rachabes. Boés dedenát Jobedam, apo Ruthes.
+Jobed dedenát Jessáiam.}
+\v{6}{Jessái dedenát redam Davidam. David dedenát Solomonam, apo benas Urias.}
+\v{7}{Solomón dedenát Roboamam. Roboám dedenát Abiam. Abia dedenát Asapham.}
+\v{8}{Asaph dedenát Josaphatam. Josaphat dedenát Joramam. Jorám dedenát
 Oziam.}
-\v{9}{Ozia dedenat Joathamam. Joathám dedenat Achazam. Achaz dedenat Ezekiam.}
-\v{10}{Ezekia dedenat Manassam. Manassa dedenat Amosam. Amós dedenat Josiam.}
-\v{11}{Josia dedenat Jechoniam i enosjo bratrans ana atidemí Babylonai.}
-\v{12}{Pos atidemiam Babylonai, Jechonia dedenat Salathielam. Salathiel
-dedenat Zorobabelam.}
-\v{13}{Zorobabel dedenat Abiudam. Abiud dedenat Eliakimam. Eliakím dedenat
+\v{9}{Ozia dedenát Joathamam. Joathám dedenát Achazam. Achaz dedenát Ezekiam.}
+\v{10}{Ezekia dedenát Manassam. Manassa dedenát Amosam. Amós dedenát Josiam.}
+\v{11}{Josia dedenát Jechoniam i enosjo bratrans ana atidemí Babylonai.}
+\v{12}{Pos atidemiam Babylonai, Jechonia dedenát Salathielam. Salathiel
+dedenát Zorobabelam.}
+\v{13}{Zorobabel dedenát Abiudam. Abiud dedenát Eliakimam. Eliakím dedenát
 Azoram.}
-\v{14}{Azor dedenat Sadokam. Sadok dedenat Achimam. Achím dedenat Eliudam.}
-\v{15}{Eliud dedenat Eleazaram. Eleazar dedenat Matthanam. Matthán dedenat
+\v{14}{Azor dedenát Sadokam. Sadok dedenát Achimam. Achím dedenát Eliudam.}
+\v{15}{Eliud dedenát Eleazaram. Eleazar dedenát Matthanam. Matthán dedenát
 Jacobom.}
-\v{16}{Jacobos dedenat Josephom, virom Marias, apo josjas dedenato Jesus,
+\v{16}{Jacobos dedenát Josephom, virom Marias, apo josjas dedenáto Jesus,
 vopomnos Christos.}
 \v{17}{Septoives, bunt totali petvordasam danamenóm apo Abrahames do Davides,
 petvordasam apo Davides do atidemias Babylonai, da petvordasam apo atidemias
@@ -237,8 +237,8 @@ enoimos, da ne nos ducjés en somblesnom.}
 
 \v{1:1}{En prameni but Verdom, da Verdom opi Divosjo, da Divos Verdom.}
 \v{2}{Enod but en prameni opi Divosjo.}
-\v{3}{Solnoi tros Enod dedenanto, da enu Enosjo ne dedenato nege nepod, jod
-dedenato.}
+\v{3}{Solnoi tros Enod dedenánto, da enu Enosjo ne dedenáto nege nepod, jod
+dedenáto.}
 \v{4}{En Enosmi but biva, da biva lukos viróm.}
 \v{5}{Da lukos en rebesi lúketor, da rebos Enod ne protiseslabjont.}
 
